--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/seayprem/discord-bot-gruppegrak-music/issues"
   },
-  "homepage": "https://github.com/seayprem/discord-bot-gruppegrak-music#readme"
+  "homepage": "https://github.com/seayprem/discord-bot-gruppegrak-music#readme",
+  "dependencies": {
+    "@discordjs/opus": "^0.4.0",
+    "discord.js": "^12.5.1",
+    "ffmpeg-static": "^4.2.7",
+    "yt-search": "^2.7.3",
+    "ytdl-core": "^4.5.0"
+  }
 }
